DDF-3219 Reformat Codebase (#2329)
* DDF-3219 Add formatter plugin and update README

* DDF-3219 Fixed some non conformant headers

* DDF-3219 Apply codebase reformat